@@ -1,17 +1,0 @@
-# Define Debian-specific defaults.
-
-CONFIG_NAME = debian-default
-
-OPT_FLAGS = -O2 -g
-
-# override settings in configs/linux-x86-64
-LIB_DIR = lib
-EXTRA_LIB_PATH =
-
-SRC_DIRS = mesa
-PROGRAM_DIRS =
-
-INSTALL_DIR = /usr
-
-# vim: ft=make
-
