@@ -1,36 +1,0 @@
-# Configuration defaults for building the DRI drivers and DRI/GLX-enabled
-# libGL.
-
-include $(TOP)/configs/debian-default
-
-CONFIG_NAME = debian-dri-default
-
-SRC_DIRS = glx/x11 mesa progs
-DRIVER_DIRS = dri
-PROGRAM_DIRS = xdemos
-PROGS = glxdemo \
-        glxgears \
-        glxheads \
-        glxinfo
-
-LIB_DIR = lib/glx
-
-DRI_DRIVER_INSTALL_DIR = $(INSTALL_DIR)/lib/dri
-DRI_DRIVER_SEARCH_DIR = /usr/lib/dri
-
-DRI_DIRS = mach64 mga r128 r200 r300 radeon s3v savage tdfx trident
-
-ARCH_X86 = i386 amd64
-
-ifneq ($(filter $(DEB_HOST_ARCH_CPU), $(ARCH_X86)),)
-	DRI_DIRS += i810 i915 i965 sis unichrome
-endif
-
-ifeq ($(DEB_BUILD_ARCH), sparc)
-	DRI_DIRS += ffb
-endif
-
-APP_LIB_DEPS = -L$(TOP)/$(LIB_DIR) -l$(GL_LIB)
-
-# vim: ft=make
-
