@@ -1,9 +1,0 @@
-# Configuration for building only OSMesa on Debian.
-
-include $(TOP)/configs/linux-osmesa
-include $(TOP)/configs/debian-osmesa-default
-
-CONFIG_NAME = debian-osmesa
-
-# vim: ft=make
-
