@@ -1,10 +1,0 @@
-# Configuration defaults for building OSMesa.
-
-include $(TOP)/configs/debian-default
-
-CONFIG_NAME = debian-osmesa-default
-
-DRIVER_DIRS = osmesa
-
-# vim: ft=make
-
