@@ -1,9 +1,0 @@
-# Configuration for building only OSMesa (static version) on Debian.
-
-include $(TOP)/configs/linux-osmesa-static
-include $(TOP)/configs/debian-osmesa-default
-
-CONFIG_NAME = debian-osmesa-static
-
-# vim: ft=make
-
