@@ -1,10 +1,0 @@
-# Configuration for building OSMesa with support for 16 bits per color
-# channel.
-
-include $(TOP)/configs/linux-osmesa16
-include $(TOP)/configs/debian-osmesa-default
-
-CONFIG_NAME = debian-osmesa16
-
-# vim: ft=make
-
