@@ -1,10 +1,0 @@
-# Configuration for building a static version of OSMesa with support for 32
-# bits per color channel.
-
-include $(TOP)/configs/linux-osmesa32-static
-include $(TOP)/configs/debian-osmesa-default
-
-CONFIG_NAME = debian-osmesa32-static
-
-# vim: ft=make
-
