@@ -1,12 +1,0 @@
-# Configuration for building Mesa (swx11 and GLU) on alpha (ev5 optimized).
-
-include $(TOP)/configs/linux-alpha
-include $(TOP)/configs/debian-swx11+glu-default
-
-CONFIG_NAME = debian-swx11+glu-alpha-ev5
-
-SRC_DIRS = mesa
-LIB_DIR = lib/ev5/cmov
-
-# vim: ft=make
-
