@@ -1,10 +1,0 @@
-# Configuration for building Mesa (swx11 and GLU) with runtime-detected
-# assembler optimizations on amd64.
-
-include $(TOP)/configs/linux-x86-64
-include $(TOP)/configs/debian-swx11+glu-default
-
-CONFIG_NAME = debian-swx11+glu-amd64
-
-# vim: ft=make
-
