@@ -1,14 +1,0 @@
-# Configuration for building Mesa (swx11 and GLU) with runtime-detected
-# assembler optimizations on i386 (i686 optimized).
-
-include $(TOP)/configs/linux-x86
-include $(TOP)/configs/debian-swx11+glu-default
-
-CONFIG_NAME = debian-swx11+glu-i386-i686
-
-ARCH_FLAGS += -march=i686
-SRC_DIRS = mesa
-LIB_DIR = lib/i686/cmov
-
-# vim: ft=make
-
