@@ -1,11 +1,0 @@
-# Configuration for building Mesa (swx11 and GLU) with runtime-detected
-# assembler optimizations on ppc64.
-
-include $(TOP)/configs/debian-swx11+glu-any
-
-CONFIG_NAME = debian-swx11+glu-ppc64
-
-LIB_DIR = lib64
-
-# vim: ft=make
-
