@@ -1,13 +1,0 @@
-# Configuration for building Mesa (swx11 and GLU) with runtime-detected
-# assembler optimizations on sparc (ultrasparc-optimized).
-
-include $(TOP)/configs/linux-ultrasparc
-include $(TOP)/configs/debian-swx11+glu-default
-
-CONFIG_NAME = debian-swx11+glu-sparc-ultrasparc
-
-SRC_DIRS = mesa
-LIB_DIR = lib/ultrasparc/cmov
-
-# vim: ft=make
-
