@@ -1,10 +1,0 @@
-# Configuration for building static versions of the libraries (swx11 and GLU)
-# on the build architecture.
-
-include $(TOP)/configs/linux-static
-include $(TOP)/configs/debian-swx11+glu-default
-
-CONFIG_NAME = debian-swx11+glu-static-any
-
-# vim: ft=make
-
