@@ -1,10 +1,0 @@
-# Configuration for building static versions of the libraries (swx11 and GLU)
-# on i386.
-
-include $(TOP)/configs/linux-x86-static
-include $(TOP)/configs/debian-swx11+glu-default
-
-CONFIG_NAME = debian-swx11+glu-static-i386
-
-# vim: ft=make
-
