@@ -1,11 +1,0 @@
-# Configuration for building static versions of the libraries (swx11 and GLU)
-# on ppc64.
-
-include $(TOP)/configs/debian-swx11+glu-static-any
-
-CONFIG_NAME = debian-swx11+glu-static-ppc64
-
-LIB_DIR = lib64
-
-# vim: ft=make
-
