@@ -1,75 +1,0 @@
-# Default/template configuration
-
-# This is included by other config files which may override some
-# of these variables.
-
-CONFIG_NAME = default
-
-# Version info
-MESA_MAJOR=6
-MESA_MINOR=3
-MESA_TINY=0
-
-# external projects
-#DRM_SOURCE_PATH=$(TOP)/../drm
-DRM_SOURCE_PATH=/home/projects/DRI-freedesktop/drm
-
-# Compiler and flags
-CC = cc
-CXX = CC
-CFLAGS = -O
-CXXFLAGS = -O
-GLU_CFLAGS = 
-
-# Misc tools and flags
-MKLIB_OPTIONS = 
-MKDEP = makedepend
-MKDEP_OPTIONS = -fdepend
-MAKE = make
-
-# Library names (base name)
-GL_LIB = GL
-GLU_LIB = GLU
-GLUT_LIB = glut
-GLW_LIB = GLw
-OSMESA_LIB = OSMesa
-
-
-# Library names (actual file names)
-GL_LIB_NAME = lib$(GL_LIB).so
-GLU_LIB_NAME = lib$(GLU_LIB).so
-GLUT_LIB_NAME = lib$(GLUT_LIB).so
-GLW_LIB_NAME = lib$(GLW_LIB).so
-OSMESA_LIB_NAME = lib$(OSMesa).so
-
-
-# Optional assembly language optimization files for libGL
-ASM_SOURCES = 
-
-# GLw widget sources (Append "GLwMDrawA.c" here and add -lXm to GLW_LIB_DEPS in
-# order to build the Motif widget too)
-GLW_SOURCES = GLwDrawA.c
-
-
-# Directories
-LIB_DIR = $(TOP)/lib
-INSTALL_PREFIX = /usr/local
-SRC_DIRS = mesa glu glut/glx glw
-GLU_DIRS = sgi
-DRIVER_DIRS = x11 osmesa
-# Which subdirs under $(TOP)/progs/ to enter:
-PROGRAM_DIRS = demos redbook samples xdemos
-
-
-# Library/program dependencies
-GL_LIB_DEPS = -lX11 -lXext -lm -lpthread
-OSMESA_LIB_DEPS = -L$(LIB_DIR) -l$(GL_LIB)
-GLU_LIB_DEPS = -L$(LIB_DIR) -l$(GL_LIB) -lm
-GLUT_LIB_DEPS = -L$(LIB_DIR) -l$(GLU_LIB) -l$(GL_LIB) -lX11 -lXmu -lXt -lXi -lm
-GLW_LIB_DEPS = -L$(LIB_DIR) -l$(GL_LIB) -lXt -lX11
-APP_LIB_DEPS = -L$(LIB_DIR) -l$(GLUT_LIB) -l$(GLU_LIB) -l$(GL_LIB) -lm
-
-
-# Shading language support (set to 0 or 1)
-SHADING_LANGUAGE = 0
-
