@@ -1,15 +1,0 @@
-# Configuration for building only libOSMesa on Linux, no Xlib driver
-# This doesn't really have any Linux dependencies, so it should be usable
-# on other (gcc-based) systems.
-
-include $(TOP)/configs/linux-osmesa
-
-CONFIG_NAME = linux-osmesa-static
-
-# Compiler and flags
-MKLIB_OPTIONS = -static
-PIC_FLAGS =
-
-# Library names
-OSMESA_LIB_NAME = lib$(OSMESA_LIB).a
-
