@@ -1,13 +1,0 @@
-# Configuration for 32 bits/channel OSMesa library on Linux
-
-include $(TOP)/configs/linux-osmesa32
-
-CONFIG_NAME = linux-osmesa32-static
-
-# Compiler and flags
-MKLIB_OPTIONS = -static
-PIC_FLAGS =
-
-# Library names
-OSMESA_LIB_NAME = lib$(OSMESA_LIB).a
-
